# tee-web-prover

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: .secrets.example  README.md  build_and_deploy_tee.yaml  deploy_tee.yaml  main.yaml
.github/workflows/tee/: startup-script.sh
.github/workflows/tee/services/: notary.config.toml  notary.service  startup-notary.sh
fixtures/: notary.config.toml
fixtures/certs/: Makefile  ca-cert.cer  ca-cert.pem  ca-key.pem  server-cert.pem  server-key.pem  server.csr
src/: config.rs  errors.rs  main.rs
